<resources>
    <string name="app_name">cryptoMonitor</string>
    <string name="app_title">Monitor de Crypto Moedas</string>
    <string name="label_value">R$ 0,00</string>
    <string name="label_date">Data e horário</string>
    <string name="label_refresh">Atualizar</string>
    <string name="spinner_btc_text" translatable="false">Bictoin</string>
    <string name="spinner_xlm_text" translatable="false">Stellar</string>
    <string name="spinner_eth_text" translatable="false">Ethereum\n</string>
    <string name="spinner_usdt_text" translatable="false">Tether USDt</string>
    <string name="spinner_xrp_text" translatable="false">XRP</string>
    <string name="spinner_sol_text" translatable="false">Solana</string>
    <string name="spinner_doge_text" translatable="false">Dogecoin</string>
    <string name="spinner_trx_text" translatable="false">TRON</string>
    <string name="spinner_usdc_text" translatable="false">USDC</string>
    <string name="label_variation">Variação</string>
    <string name="coin" translatable="false">%1$s</string>
    <string name="time" translatable="false">%1$s</string>
    <string name="last_value" translatable="false">%1$d</string>
</resources>