<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp">

    <TextView
        android:id="@+id/info_coin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/coin"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/info_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:text="@string/time"/>

    <TextView
        android:id="@+id/info_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_value"
        android:textStyle="bold" />
</LinearLayout>
