<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="15dp">


    <include
        layout="@layout/component_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <include
        layout="@layout/component_button_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_value"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_variation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_variation"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/lbl_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date"
        android:layout_marginTop="5dp"/>

</LinearLayout>